fix issue: the text of each vertex can overlap some neighbooring object and prevent the display of the tooltip

--- a/style.css
+++ b/style.css
@@ -69,11 +69,12 @@ svg .axes text {
   text-anchor: middle;
   alignment-baseline: central;
   opacity: 1;
+  pointer-events: none;
 }
 
-.vertex .hover_transparent_circle {
-  z-index: 20;
-}
+/* .vertex .hover_transparent_circle { */
+/*   z-index: 20; */
+/* } */
 
 .vertex ellipse {
   /* covariance */
